--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
             <span id="titulo">Hi, This is my Portfolio :)</span>
 
-            <img src="img/undraw_code_review_l1q9.svg" alt="">
+            <img src="img/undraw_code_review_l1q9.svg" alt="" id="move">
 
             <span class="texto">My name is Reinaldo Silva</span>
             <span class="texto">I am a beginner developer who is looking for new challenges in the area of ​​app
@@ -134,8 +134,15 @@
         </div>
 
     </div>
-
+    <script src="scroll-out.js" type="text/javascript"></script>
     <script src="app.js" type="text/javascript"></script>
+    <script type="text/javascript">
+
+        ScrollOut({
+            targets: '.texto, #move, #titulo'
+        })
+
+    </script>
 
 </body>
 
