Adicionando animação part2

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     <script type="text/javascript">
 
         ScrollOut({
-            targets: '.texto, #move, #titulo'
+            targets: '.texto, #move, #titulo, #texto2'
         })
 
     </script>
