Adicionando a tela more e corrigindo alguns erros

--- a/index.html
+++ b/index.html
@@ -20,26 +20,27 @@
         <ul class="nav-link">
             <li>
                 <a href="#aqui" id="projectIcon">
-                    <img src="img/graphics-editor.svg" alt="icone projetos">
-                    Projects
+                    <img src="img/graphics-editor.svg" alt="icone projetos"> Projects
                 </a>
             </li>
             <li>
                 <a href="https://github.com/reinaldo-silva" alt="icone GitHub">
-                    <img src="img/logotype.svg">
-                    GitHub
+                    <img src="img/logotype.svg"> GitHub
                 </a>
             </li>
             <li>
                 <a href="https://www.facebook.com/junin.devatz" alt="icone Facebook">
-                    <img src="img/connections.svg">
-                    Facebook
+                    <img src="img/connections.svg"> Facebook
                 </a>
             </li>
             <li>
                 <a href="https://www.instagram.com/_reinaldosilva/" alt="icone Instagram">
-                    <img src="img/logo.svg">
-                    Instagram
+                    <img src="img/logo.svg"> Instagram
+                </a>
+            </li>
+            <li>
+                <a href="linkedin.com/in/reinaldo-silva-junior-543a25128" alt="icone LinkedIn">
+                    <img src="img/social-media.svg"> LinkedIn
                 </a>
             </li>
         </ul>
@@ -77,7 +78,22 @@
 
         <div id="texto2">
 
+            <img src="img/left-arrow.svg" id="flecha">
+
             <span>Projects</span>
+
+        </div>
+
+        <div class="more">
+
+            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt neque similique consectetur unde
+                quod veritatis, fugiat facere cumque at. Ipsam numquam reiciendis pariatur illo fugiat accusamus
+                suscipit iusto officiis quisquam, nesciunt aliquid, quis facilis itaque esse quidem! Illum veniam nam
+                praesentium, maxime architecto facilis voluptatibus, quis similique esse quisquam corporis et atque
+                sapiente voluptatum ipsam non cumque ad nobis. Quibusdam accusamus eveniet, aliquam est, sit pariatur
+                consectetur atque aperiam vel modi neque quaerat repellat nobis veniam cum quae officia facilis. Quia
+                veritatis animi voluptate asperiores culpa minima ex eaque fugiat perspiciatis odio, officiis iste
+                nihil. Inventore ea earum quo nemo?</span>
 
         </div>
 
@@ -94,7 +110,7 @@
                     <div class="content">
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate animi in quae laboriosam
                             consectetur fuga!</p>
-                        <a href="#">Read More</a>
+                        <a href="#aqui" id="morePortfolio">Read More</a>
                     </div>
                 </div>
             </div>
@@ -136,12 +152,11 @@
     </div>
     <script src="scroll-out.js" type="text/javascript"></script>
     <script src="app.js" type="text/javascript"></script>
+    <script src="slideMore.js" type="text/javascript"></script>
     <script type="text/javascript">
-
         ScrollOut({
-            targets: '.texto, #move, #titulo, #texto2'
+            targets: '.texto,.textoMore, #move, #titulo, #texto2'
         })
-
     </script>
 
 </body>
