Alterando img e colors do site

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
             <span id="titulo">Hi, This is my Portfolio :)</span>
 
-            <img src="img/undraw_code_review_l1q9.svg" alt="" id="move">
+            <img src="img/undraw_dev_productivity_umsq.svg" alt="" id="move">
 
             <span class="texto">My name is Reinaldo Silva</span>
             <span class="texto">I am a beginner developer who is looking for new challenges in the area of ​​app
@@ -102,7 +102,7 @@
             <div class="card">
                 <div class="face face1">
                     <div class="content">
-                        <img src="img/id-card-solid.svg" alt="">
+                        <img src="img/business.svg" alt="">
                         <h3>Portfolio</h3>
                     </div>
                 </div>
@@ -118,7 +118,7 @@
             <div class="card">
                 <div class="face face1">
                     <div class="content">
-                        <img src="img/map-marked-alt-solid.svg" alt="">
+                        <img src="img/signs.svg" alt="">
                         <h3>QuestFinder</h3>
                     </div>
                 </div>
@@ -134,7 +134,7 @@
             <div class="card">
                 <div class="face face1">
                     <div class="content">
-                        <img src="img/chalkboard-teacher-solid.svg" alt="">
+                        <img src="img/communications.svg" alt="">
                         <h3>Aulas-Unifafibe</h3>
                     </div>
                 </div>
